--- a/react-frontend/src/page/city.css
+++ b/react-frontend/src/page/city.css
@@ -14,7 +14,7 @@
 .city1 img {
   position: absolute;
   left: 75px;
-  top: 125px;
+  top: 170px;
   height: 275px;
   width: 400px;
   border-radius: 15px;
@@ -23,7 +23,7 @@
 .city1 div {
   position: absolute;
   right: 100px;
-  top: 135px;
+  top: 170px;
   width: 330px;
   text-align: left;
   background-color: #d4ffe7;
