--- a/react-frontend/src/page/home.css
+++ b/react-frontend/src/page/home.css
@@ -68,7 +68,7 @@ a {
 .banner {
   position: absolute;
   left: 0px;
-  top: 100px;
+  top: 130px;
   width: 100%;
   height: 300px;
 }
